Clear circular dependency
