# internal/model/meal_comment.go
@@ -11,8 +11,6 @@ type MenuItemComment struct {
 	ParentID    *uint             `json:"parent_id" gorm:"default:null"` // Added to support replies
 	MealEvent   MealEvent         `json:"meal_event" gorm:"foreignKey:MealEventID"`
 	MenuItem    MenuItem          `json:"menu_item" gorm:"foreignKey:MenuItemID"`
-	CreatedBy   User              `json:"created_by" gorm:"foreignKey:CreatedBy"`
-	UpdatedBy   User              `json:"updated_by" gorm:"foreignKey:UpdatedBy"`
 	Parent      *MenuItemComment  `json:"parent,omitempty" gorm:"foreignKey:ParentID"`
 	Replies     []MenuItemComment `json:"replies,omitempty" gorm:"foreignKey:ParentID"`
 }
