# internal/model/menu_set.go
@@ -5,9 +5,6 @@ type MenuSet struct {
 	Base
 	MenuSetName        string         `json:"menu_set_name" gorm:"not null"`
 	MenuSetDescription string         `json:"menu_set_description"`
-	IsActive           bool           `json:"is_active" gorm:"default:true"`
-	CreatedBy          User           `json:"created_by" gorm:"foreignKey:CreatedBy"`
-	UpdatedBy          User           `json:"updated_by" gorm:"foreignKey:UpdatedBy"`
 	MenuSetItems       []MenuSetItem  `json:"menu_set_items" gorm:"foreignKey:MenuSetID"`
 	MealEventSets      []MealEventSet `json:"meal_event_sets" gorm:"foreignKey:MenuSetID"`
 }
@@ -19,6 +16,4 @@ type MenuSetItem struct {
 	MenuItemID uint     `json:"menu_item_id" gorm:"not null"`
 	MenuSet    MenuSet  `json:"menu_set" gorm:"foreignKey:MenuSetID"`
 	MenuItem   MenuItem `json:"menu_item" gorm:"foreignKey:MenuItemID"`
-	CreatedBy  User     `json:"created_by" gorm:"foreignKey:CreatedBy"`
-	UpdatedBy  User     `json:"updated_by" gorm:"foreignKey:UpdatedBy"`
 }
